# SPLN2023

./: README.md
TP1/: proc_xml_to_txt.py
TP2/: Notas  example.txt  lex.py  my_parser.py  mylex.py  parser.out  parser.py  parsetab.py
TP3/: convert_json.py  medicina_csv.csv  medicina_md.md
TP4/: ocorrencias.txt  teste  tokenizer.py
TP5/: Harry_Potter_e_A_Pedra_Filosofal.txt  LICENSE  pyproject.toml
TP5/tokenizer/: __init__.py
